--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
@@ -170,6 +170,12 @@
         "x-ms-examples": {
           "Connections_List_MaximumSet": {
             "$ref": "./examples/Connections_List_MaximumSet_Gen.json"
+          },
+          "Connections_List_MaximumSet_Gen": {
+            "$ref": "./examples/Connections_List_MaximumSet_Gen.json"
+          },
+          "Connections_List_MinimumSet_Gen": {
+            "$ref": "./examples/Connections_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -226,6 +232,12 @@
         "x-ms-examples": {
           "Connections_Get_MaximumSet": {
             "$ref": "./examples/Connections_Get_MaximumSet_Gen.json"
+          },
+          "Connections_Get_MaximumSet_Gen": {
+            "$ref": "./examples/Connections_Get_MaximumSet_Gen.json"
+          },
+          "Connections_Get_MinimumSet_Gen": {
+            "$ref": "./examples/Connections_Get_MinimumSet_Gen.json"
           }
         }
       }
@@ -279,6 +291,12 @@
         "x-ms-examples": {
           "Connections_GetWithCredentials_MaximumSet": {
             "$ref": "./examples/Connections_GetWithCredentials_MaximumSet_Gen.json"
+          },
+          "Connections_GetWithCredentials_MaximumSet_Gen": {
+            "$ref": "./examples/Connections_GetWithCredentials_MaximumSet_Gen.json"
+          },
+          "Connections_GetWithCredentials_MinimumSet_Gen": {
+            "$ref": "./examples/Connections_GetWithCredentials_MinimumSet_Gen.json"
           }
         }
       }
@@ -317,6 +335,12 @@
             "$ref": "./examples/Datasets_ListLatest_MaximumSet_Gen.json"
           },
           "Datasets_ListLatest_MinimumSet": {
+            "$ref": "./examples/Datasets_ListLatest_MinimumSet_Gen.json"
+          },
+          "Datasets_ListLatest_MaximumSet_Gen": {
+            "$ref": "./examples/Datasets_ListLatest_MaximumSet_Gen.json"
+          },
+          "Datasets_ListLatest_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_ListLatest_MinimumSet_Gen.json"
           }
         },
@@ -366,6 +390,12 @@
             "$ref": "./examples/Datasets_ListVersions_MaximumSet_Gen.json"
           },
           "Datasets_ListVersions_MinimumSet": {
+            "$ref": "./examples/Datasets_ListVersions_MinimumSet_Gen.json"
+          },
+          "Datasets_ListVersions_MaximumSet_Gen": {
+            "$ref": "./examples/Datasets_ListVersions_MaximumSet_Gen.json"
+          },
+          "Datasets_ListVersions_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_ListVersions_MinimumSet_Gen.json"
           }
         },
@@ -422,6 +452,12 @@
             "$ref": "./examples/Datasets_GetVersion_MaximumSet_Gen.json"
           },
           "Datasets_GetVersion_MinimumSet": {
+            "$ref": "./examples/Datasets_GetVersion_MinimumSet_Gen.json"
+          },
+          "Datasets_GetVersion_MaximumSet_Gen": {
+            "$ref": "./examples/Datasets_GetVersion_MaximumSet_Gen.json"
+          },
+          "Datasets_GetVersion_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_GetVersion_MinimumSet_Gen.json"
           }
         }
@@ -492,6 +528,12 @@
           },
           "Datasets_CreateOrUpdateVersion_MinimumSet": {
             "$ref": "./examples/Datasets_CreateOrUpdateVersion_MinimumSet_Gen.json"
+          },
+          "Datasets_CreateOrUpdateVersion_MaximumSet_Gen": {
+            "$ref": "./examples/Datasets_CreateOrUpdateVersion_MaximumSet_Gen.json"
+          },
+          "Datasets_CreateOrUpdateVersion_MinimumSet_Gen": {
+            "$ref": "./examples/Datasets_CreateOrUpdateVersion_MinimumSet_Gen.json"
           }
         }
       },
@@ -539,6 +581,12 @@
             "$ref": "./examples/Datasets_DeleteVersion_MaximumSet_Gen.json"
           },
           "Datasets_DeleteVersion_MinimumSet": {
+            "$ref": "./examples/Datasets_DeleteVersion_MinimumSet_Gen.json"
+          },
+          "Datasets_DeleteVersion_MaximumSet_Gen": {
+            "$ref": "./examples/Datasets_DeleteVersion_MaximumSet_Gen.json"
+          },
+          "Datasets_DeleteVersion_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_DeleteVersion_MinimumSet_Gen.json"
           }
         }
@@ -592,6 +640,12 @@
             "$ref": "./examples/Datasets_GetCredentials_MaximumSet_Gen.json"
           },
           "Datasets_GetCredentials_MinimumSet": {
+            "$ref": "./examples/Datasets_GetCredentials_MinimumSet_Gen.json"
+          },
+          "Datasets_GetCredentials_MaximumSet_Gen": {
+            "$ref": "./examples/Datasets_GetCredentials_MaximumSet_Gen.json"
+          },
+          "Datasets_GetCredentials_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_GetCredentials_MinimumSet_Gen.json"
           }
         }
@@ -654,6 +708,12 @@
             "$ref": "./examples/Datasets_StartPendingUploadVersion_MaximumSet_Gen.json"
           },
           "Datasets_StartPendingUploadVersion_MinimumSet": {
+            "$ref": "./examples/Datasets_StartPendingUploadVersion_MinimumSet_Gen.json"
+          },
+          "Datasets_StartPendingUploadVersion_MaximumSet_Gen": {
+            "$ref": "./examples/Datasets_StartPendingUploadVersion_MaximumSet_Gen.json"
+          },
+          "Datasets_StartPendingUploadVersion_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_StartPendingUploadVersion_MinimumSet_Gen.json"
           }
         }
@@ -736,6 +796,12 @@
         "x-ms-examples": {
           "Deployments_List_MaximumSet": {
             "$ref": "./examples/Deployments_List_MaximumSet_Gen.json"
+          },
+          "Deployments_List_MaximumSet_Gen": {
+            "$ref": "./examples/Deployments_List_MaximumSet_Gen.json"
+          },
+          "Deployments_List_MinimumSet_Gen": {
+            "$ref": "./examples/Deployments_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -792,6 +858,12 @@
         "x-ms-examples": {
           "Deployments_Get_MaximumSet": {
             "$ref": "./examples/Deployments_Get_MaximumSet_Gen.json"
+          },
+          "Deployments_Get_MaximumSet_Gen": {
+            "$ref": "./examples/Deployments_Get_MaximumSet_Gen.json"
+          },
+          "Deployments_Get_MinimumSet_Gen": {
+            "$ref": "./examples/Deployments_Get_MinimumSet_Gen.json"
           }
         }
       }
@@ -838,6 +910,12 @@
         "x-ms-examples": {
           "Evaluations_List_MaximumSet": {
             "$ref": "./examples/Evaluations_List_MaximumSet_Gen.json"
+          },
+          "Evaluations_List_MaximumSet_Gen": {
+            "$ref": "./examples/Evaluations_List_MaximumSet_Gen.json"
+          },
+          "Evaluations_List_MinimumSet_Gen": {
+            "$ref": "./examples/Evaluations_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -894,6 +972,12 @@
         "x-ms-examples": {
           "Evaluations_Get_MaximumSet": {
             "$ref": "./examples/Evaluations_Get_MaximumSet_Gen.json"
+          },
+          "Evaluations_Get_MaximumSet_Gen": {
+            "$ref": "./examples/Evaluations_Get_MaximumSet_Gen.json"
+          },
+          "Evaluations_Get_MinimumSet_Gen": {
+            "$ref": "./examples/Evaluations_Get_MinimumSet_Gen.json"
           }
         }
       },
@@ -942,6 +1026,12 @@
         "x-ms-examples": {
           "Evaluations_Delete_MaximumSet": {
             "$ref": "./examples/Evaluations_Delete_MaximumSet_Gen.json"
+          },
+          "Evaluations_Delete_MaximumSet_Gen": {
+            "$ref": "./examples/Evaluations_Delete_MaximumSet_Gen.json"
+          },
+          "Evaluations_Delete_MinimumSet_Gen": {
+            "$ref": "./examples/Evaluations_Delete_MinimumSet_Gen.json"
           }
         }
       }
@@ -992,6 +1082,12 @@
         "x-ms-examples": {
           "Evaluations_Cancel_MaximumSet": {
             "$ref": "./examples/Evaluations_Cancel_MaximumSet_Gen.json"
+          },
+          "Evaluations_Cancel_MaximumSet_Gen": {
+            "$ref": "./examples/Evaluations_Cancel_MaximumSet_Gen.json"
+          },
+          "Evaluations_Cancel_MinimumSet_Gen": {
+            "$ref": "./examples/Evaluations_Cancel_MinimumSet_Gen.json"
           }
         }
       }
@@ -1039,6 +1135,12 @@
             "$ref": "./examples/Evaluations_Create_MaximumSet_Gen.json"
           },
           "Evaluations_Create_MinimumSet": {
+            "$ref": "./examples/Evaluations_Create_MinimumSet_Gen.json"
+          },
+          "Evaluations_Create_MaximumSet_Gen": {
+            "$ref": "./examples/Evaluations_Create_MaximumSet_Gen.json"
+          },
+          "Evaluations_Create_MinimumSet_Gen": {
             "$ref": "./examples/Evaluations_Create_MinimumSet_Gen.json"
           }
         }
@@ -1088,6 +1190,12 @@
           },
           "Evaluations_CreateAgentEvaluation_MinimumSet": {
             "$ref": "./examples/Evaluations_CreateAgentEvaluation_MinimumSet_Gen.json"
+          },
+          "Evaluations_CreateAgentEvaluation_MaximumSet_Gen": {
+            "$ref": "./examples/Evaluations_CreateAgentEvaluation_MaximumSet_Gen.json"
+          },
+          "Evaluations_CreateAgentEvaluation_MinimumSet_Gen": {
+            "$ref": "./examples/Evaluations_CreateAgentEvaluation_MinimumSet_Gen.json"
           }
         }
       }
@@ -1126,6 +1234,12 @@
             "$ref": "./examples/Indexes_ListLatest_MaximumSet_Gen.json"
           },
           "Indexes_ListLatest_MinimumSet": {
+            "$ref": "./examples/Indexes_ListLatest_MinimumSet_Gen.json"
+          },
+          "Indexes_ListLatest_MaximumSet_Gen": {
+            "$ref": "./examples/Indexes_ListLatest_MaximumSet_Gen.json"
+          },
+          "Indexes_ListLatest_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_ListLatest_MinimumSet_Gen.json"
           }
         },
@@ -1175,6 +1289,12 @@
             "$ref": "./examples/Indexes_ListVersions_MaximumSet_Gen.json"
           },
           "Indexes_ListVersions_MinimumSet": {
+            "$ref": "./examples/Indexes_ListVersions_MinimumSet_Gen.json"
+          },
+          "Indexes_ListVersions_MaximumSet_Gen": {
+            "$ref": "./examples/Indexes_ListVersions_MaximumSet_Gen.json"
+          },
+          "Indexes_ListVersions_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_ListVersions_MinimumSet_Gen.json"
           }
         },
@@ -1231,6 +1351,12 @@
             "$ref": "./examples/Indexes_GetVersion_MaximumSet_Gen.json"
           },
           "Indexes_GetVersion_MinimumSet": {
+            "$ref": "./examples/Indexes_GetVersion_MinimumSet_Gen.json"
+          },
+          "Indexes_GetVersion_MaximumSet_Gen": {
+            "$ref": "./examples/Indexes_GetVersion_MaximumSet_Gen.json"
+          },
+          "Indexes_GetVersion_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_GetVersion_MinimumSet_Gen.json"
           }
         }
@@ -1301,6 +1427,12 @@
           },
           "Indexes_CreateOrUpdateVersion_MinimumSet": {
             "$ref": "./examples/Indexes_CreateOrUpdateVersion_MinimumSet_Gen.json"
+          },
+          "Indexes_CreateOrUpdateVersion_MaximumSet_Gen": {
+            "$ref": "./examples/Indexes_CreateOrUpdateVersion_MaximumSet_Gen.json"
+          },
+          "Indexes_CreateOrUpdateVersion_MinimumSet_Gen": {
+            "$ref": "./examples/Indexes_CreateOrUpdateVersion_MinimumSet_Gen.json"
           }
         }
       },
@@ -1348,6 +1480,12 @@
             "$ref": "./examples/Indexes_DeleteVersion_MaximumSet_Gen.json"
           },
           "Indexes_DeleteVersion_MinimumSet": {
+            "$ref": "./examples/Indexes_DeleteVersion_MinimumSet_Gen.json"
+          },
+          "Indexes_DeleteVersion_MaximumSet_Gen": {
+            "$ref": "./examples/Indexes_DeleteVersion_MaximumSet_Gen.json"
+          },
+          "Indexes_DeleteVersion_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_DeleteVersion_MinimumSet_Gen.json"
           }
         }
@@ -1450,6 +1588,9 @@
         "x-ms-examples": {
           "Insights_ListInsights": {
             "$ref": "./examples/Insights_ListInsights_MinimumSet_Gen.json"
+          },
+          "Insights_ListInsights_MaximumSet_Gen": {
+            "$ref": "./examples/Insights_ListInsights_MaximumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -1513,6 +1654,9 @@
         "x-ms-examples": {
           "Insights_GenerateInsights": {
             "$ref": "./examples/Insights_GenerateInsights_MinimumSet_Gen.json"
+          },
+          "Insights_GenerateInsights_MaximumSet_Gen": {
+            "$ref": "./examples/Insights_GenerateInsights_MaximumSet_Gen.json"
           }
         }
       }
@@ -1573,6 +1717,9 @@
         "x-ms-examples": {
           "Insights_GetInsight": {
             "$ref": "./examples/Insights_GetInsight_MinimumSet_Gen.json"
+          },
+          "Insights_GetInsight_MaximumSet_Gen": {
+            "$ref": "./examples/Insights_GetInsight_MaximumSet_Gen.json"
           }
         }
       }
@@ -1619,6 +1766,12 @@
         "x-ms-examples": {
           "RedTeams_List_MaximumSet": {
             "$ref": "./examples/RedTeams_List_MaximumSet_Gen.json"
+          },
+          "RedTeams_List_MaximumSet_Gen": {
+            "$ref": "./examples/RedTeams_List_MaximumSet_Gen.json"
+          },
+          "RedTeams_List_MinimumSet_Gen": {
+            "$ref": "./examples/RedTeams_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -1675,6 +1828,12 @@
         "x-ms-examples": {
           "RedTeams_Get_MaximumSet": {
             "$ref": "./examples/RedTeams_Get_MaximumSet_Gen.json"
+          },
+          "RedTeams_Get_MaximumSet_Gen": {
+            "$ref": "./examples/RedTeams_Get_MaximumSet_Gen.json"
+          },
+          "RedTeams_Get_MinimumSet_Gen": {
+            "$ref": "./examples/RedTeams_Get_MinimumSet_Gen.json"
           }
         }
       }
@@ -1723,6 +1882,12 @@
           },
           "RedTeams_Create_MinimumSet": {
             "$ref": "./examples/RedTeams_Create_MinimumSet_Gen.json"
+          },
+          "RedTeams_Create_MaximumSet_Gen": {
+            "$ref": "./examples/RedTeams_Create_MaximumSet_Gen.json"
+          },
+          "RedTeams_Create_MinimumSet_Gen": {
+            "$ref": "./examples/RedTeams_Create_MinimumSet_Gen.json"
           }
         }
       }
@@ -1768,6 +1933,11 @@
         },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
+        },
+        "x-ms-examples": {
+          "Schedules_List_MaximumSet_Gen": {
+            "$ref": "./examples/Schedules_List_MaximumSet_Gen.json"
+          }
         }
       }
     },
@@ -1815,6 +1985,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Schedules_Get_MaximumSet_Gen": {
+            "$ref": "./examples/Schedules_Get_MaximumSet_Gen.json"
           }
         }
       },
@@ -1867,6 +2042,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "Schedules_CreateOrUpdate_MaximumSet_Gen": {
+            "$ref": "./examples/Schedules_CreateOrUpdate_MaximumSet_Gen.json"
+          }
         }
       },
       "delete": {
@@ -1910,6 +2090,14 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "Schedules_Delete_MaximumSet_Gen": {
+            "$ref": "./examples/Schedules_Delete_MaximumSet_Gen.json"
+          },
+          "Schedules_Delete_MinimumSet_Gen": {
+            "$ref": "./examples/Schedules_Delete_MinimumSet_Gen.json"
+          }
         }
       }
     },
@@ -1947,6 +2135,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Schedules_ListRuns_MaximumSet_Gen": {
+            "$ref": "./examples/Schedules_ListRuns_MaximumSet_Gen.json"
           }
         }
       }
@@ -1992,6 +2185,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Schedules_GetRun_MaximumSet_Gen": {
+            "$ref": "./examples/Schedules_GetRun_MaximumSet_Gen.json"
           }
         }
       }
