--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
   },
   "overrides": {
     "@typespec/asset-emitter": "0.74.0",
-    "jsonpath-plus": "^10.3.0"
+    "jsonpath-plus": "^10.3.0",
+    "oav": {
+      "glob": "^9.3.5"
+    }
   },
   "engines": {
     "node": ">=20.0.0",
