--- a/specification/confidentialledger/Confidentialledger.Management/tspconfig.yaml
+++ b/specification/confidentialledger/Confidentialledger.Management/tspconfig.yaml
@@ -37,8 +37,8 @@ options:
       name: "@azure/arm-confidentialledger"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/confidentialledger"
-    package-dir: "armconfidentialledger"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armconfidentialledger"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armconfidentialledger"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
