--- a/specification/confidentialledger/Confidentialledger.Management/tspconfig.yaml
+++ b/specification/confidentialledger/Confidentialledger.Management/tspconfig.yaml
@@ -10,6 +10,7 @@ options:
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
     examples-dir: "{project-root}/examples"
+    emit-lro-options: "all"
   "@azure-tools/typespec-csharp":
     flavor: azure
     package-dir: "Azure.ResourceManager.ConfidentialLedger"
