--- a/specification/quota/resource-manager/Microsoft.Quota/Quota/tspconfig.yaml
+++ b/specification/quota/resource-manager/Microsoft.Quota/Quota/tspconfig.yaml
@@ -5,10 +5,11 @@ emit:
   - "@azure-tools/typespec-autorest"
 options:
   "@azure-tools/typespec-autorest":
-    emitter-output-dir: "{project-root}/.."
+    emitter-output-dir: "{project-root}"
     azure-resource-provider-folder: "resource-manager"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
+    output-file: "{version-status}/{version}/openapi.json"
     examples-dir: "{project-root}/examples"
+    arm-types-dir: "{project-root}/../../../../common-types/resource-management"
     emit-lro-options: "all"
   "@azure-tools/typespec-csharp":
     flavor: azure
