fix ordering and go config

--- a/specification/recoveryservicesbackup/RecoveryServices.Management/tspconfig.yaml
+++ b/specification/recoveryservicesbackup/RecoveryServices.Management/tspconfig.yaml
@@ -38,8 +38,8 @@ options:
       name: "@azure/arm-recoveryservicesbackup"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/recoveryservices"
-    package-dir: "armrecoveryservicesbackup"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armrecoveryservicesbackup"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armrecoveryservicesbackup"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
