--- a/specification/confidentialledger/Confidentialledger.Management/tspconfig.yaml
+++ b/specification/confidentialledger/Confidentialledger.Management/tspconfig.yaml
@@ -11,6 +11,12 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
     examples-dir: "{project-root}/examples"
     emit-lro-options: "all"
+  "@azure-tools/typespec-csharp":
+    flavor: azure
+    package-dir: "Azure.ResourceManager.ConfidentialLedger"
+    clear-output-folder: true
+    model-namespace: true
+    namespace: "{package-dir}"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-confidentialledger"
     namespace: "azure.mgmt.confidentialledger"
