Fix typo in namespace and dependencies in tspconfig.yaml

--- a/specification/purviewdatagovernace/Azure.Analaytics.Purview.DataQuality/tspconfig.yaml
+++ b/specification/purviewdatagovernace/Azure.Analaytics.Purview.DataQuality/tspconfig.yaml
@@ -2,7 +2,7 @@ parameters:
   "service-dir":
     default: "sdk/purview"
   "dependencies":
-    default: ""'
+    default: ""
 emit:
   - "@azure-tools/typespec-autorest"
 linter:
@@ -32,7 +32,7 @@ options:
     flavor: azure
   "@azure-tools/typespec-java":
     package-dir: "azure-analyatics-purview-dataquality"
-    namespace: com.azure.analyatics.purview.dataquality
+    namespace: com.azure.analaytics.purview.dataquality
     flavor: azure
   "@azure-tools/typespec-go":
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/azpurviewdataquality"
