--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
@@ -170,12 +170,6 @@
         "x-ms-examples": {
           "Connections_List_MaximumSet": {
             "$ref": "./examples/Connections_List_MaximumSet_Gen.json"
-          },
-          "Connections_List_MaximumSet_Gen": {
-            "$ref": "./examples/Connections_List_MaximumSet_Gen.json"
-          },
-          "Connections_List_MinimumSet_Gen": {
-            "$ref": "./examples/Connections_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -232,12 +226,6 @@
         "x-ms-examples": {
           "Connections_Get_MaximumSet": {
             "$ref": "./examples/Connections_Get_MaximumSet_Gen.json"
-          },
-          "Connections_Get_MaximumSet_Gen": {
-            "$ref": "./examples/Connections_Get_MaximumSet_Gen.json"
-          },
-          "Connections_Get_MinimumSet_Gen": {
-            "$ref": "./examples/Connections_Get_MinimumSet_Gen.json"
           }
         }
       }
@@ -291,12 +279,6 @@
         "x-ms-examples": {
           "Connections_GetWithCredentials_MaximumSet": {
             "$ref": "./examples/Connections_GetWithCredentials_MaximumSet_Gen.json"
-          },
-          "Connections_GetWithCredentials_MaximumSet_Gen": {
-            "$ref": "./examples/Connections_GetWithCredentials_MaximumSet_Gen.json"
-          },
-          "Connections_GetWithCredentials_MinimumSet_Gen": {
-            "$ref": "./examples/Connections_GetWithCredentials_MinimumSet_Gen.json"
           }
         }
       }
@@ -335,12 +317,6 @@
             "$ref": "./examples/Datasets_ListLatest_MaximumSet_Gen.json"
           },
           "Datasets_ListLatest_MinimumSet": {
-            "$ref": "./examples/Datasets_ListLatest_MinimumSet_Gen.json"
-          },
-          "Datasets_ListLatest_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_ListLatest_MaximumSet_Gen.json"
-          },
-          "Datasets_ListLatest_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_ListLatest_MinimumSet_Gen.json"
           }
         },
@@ -390,12 +366,6 @@
             "$ref": "./examples/Datasets_ListVersions_MaximumSet_Gen.json"
           },
           "Datasets_ListVersions_MinimumSet": {
-            "$ref": "./examples/Datasets_ListVersions_MinimumSet_Gen.json"
-          },
-          "Datasets_ListVersions_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_ListVersions_MaximumSet_Gen.json"
-          },
-          "Datasets_ListVersions_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_ListVersions_MinimumSet_Gen.json"
           }
         },
@@ -452,12 +422,6 @@
             "$ref": "./examples/Datasets_GetVersion_MaximumSet_Gen.json"
           },
           "Datasets_GetVersion_MinimumSet": {
-            "$ref": "./examples/Datasets_GetVersion_MinimumSet_Gen.json"
-          },
-          "Datasets_GetVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_GetVersion_MaximumSet_Gen.json"
-          },
-          "Datasets_GetVersion_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_GetVersion_MinimumSet_Gen.json"
           }
         }
@@ -528,12 +492,6 @@
           },
           "Datasets_CreateOrUpdateVersion_MinimumSet": {
             "$ref": "./examples/Datasets_CreateOrUpdateVersion_MinimumSet_Gen.json"
-          },
-          "Datasets_CreateOrUpdateVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_CreateOrUpdateVersion_MaximumSet_Gen.json"
-          },
-          "Datasets_CreateOrUpdateVersion_MinimumSet_Gen": {
-            "$ref": "./examples/Datasets_CreateOrUpdateVersion_MinimumSet_Gen.json"
           }
         }
       },
@@ -581,12 +539,6 @@
             "$ref": "./examples/Datasets_DeleteVersion_MaximumSet_Gen.json"
           },
           "Datasets_DeleteVersion_MinimumSet": {
-            "$ref": "./examples/Datasets_DeleteVersion_MinimumSet_Gen.json"
-          },
-          "Datasets_DeleteVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_DeleteVersion_MaximumSet_Gen.json"
-          },
-          "Datasets_DeleteVersion_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_DeleteVersion_MinimumSet_Gen.json"
           }
         }
@@ -640,12 +592,6 @@
             "$ref": "./examples/Datasets_GetCredentials_MaximumSet_Gen.json"
           },
           "Datasets_GetCredentials_MinimumSet": {
-            "$ref": "./examples/Datasets_GetCredentials_MinimumSet_Gen.json"
-          },
-          "Datasets_GetCredentials_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_GetCredentials_MaximumSet_Gen.json"
-          },
-          "Datasets_GetCredentials_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_GetCredentials_MinimumSet_Gen.json"
           }
         }
@@ -708,12 +654,6 @@
             "$ref": "./examples/Datasets_StartPendingUploadVersion_MaximumSet_Gen.json"
           },
           "Datasets_StartPendingUploadVersion_MinimumSet": {
-            "$ref": "./examples/Datasets_StartPendingUploadVersion_MinimumSet_Gen.json"
-          },
-          "Datasets_StartPendingUploadVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_StartPendingUploadVersion_MaximumSet_Gen.json"
-          },
-          "Datasets_StartPendingUploadVersion_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_StartPendingUploadVersion_MinimumSet_Gen.json"
           }
         }
@@ -796,12 +736,6 @@
         "x-ms-examples": {
           "Deployments_List_MaximumSet": {
             "$ref": "./examples/Deployments_List_MaximumSet_Gen.json"
-          },
-          "Deployments_List_MaximumSet_Gen": {
-            "$ref": "./examples/Deployments_List_MaximumSet_Gen.json"
-          },
-          "Deployments_List_MinimumSet_Gen": {
-            "$ref": "./examples/Deployments_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -858,12 +792,6 @@
         "x-ms-examples": {
           "Deployments_Get_MaximumSet": {
             "$ref": "./examples/Deployments_Get_MaximumSet_Gen.json"
-          },
-          "Deployments_Get_MaximumSet_Gen": {
-            "$ref": "./examples/Deployments_Get_MaximumSet_Gen.json"
-          },
-          "Deployments_Get_MinimumSet_Gen": {
-            "$ref": "./examples/Deployments_Get_MinimumSet_Gen.json"
           }
         }
       }
@@ -910,12 +838,6 @@
         "x-ms-examples": {
           "Evaluations_List_MaximumSet": {
             "$ref": "./examples/Evaluations_List_MaximumSet_Gen.json"
-          },
-          "Evaluations_List_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_List_MaximumSet_Gen.json"
-          },
-          "Evaluations_List_MinimumSet_Gen": {
-            "$ref": "./examples/Evaluations_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -972,12 +894,6 @@
         "x-ms-examples": {
           "Evaluations_Get_MaximumSet": {
             "$ref": "./examples/Evaluations_Get_MaximumSet_Gen.json"
-          },
-          "Evaluations_Get_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_Get_MaximumSet_Gen.json"
-          },
-          "Evaluations_Get_MinimumSet_Gen": {
-            "$ref": "./examples/Evaluations_Get_MinimumSet_Gen.json"
           }
         }
       },
@@ -1026,12 +942,6 @@
         "x-ms-examples": {
           "Evaluations_Delete_MaximumSet": {
             "$ref": "./examples/Evaluations_Delete_MaximumSet_Gen.json"
-          },
-          "Evaluations_Delete_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_Delete_MaximumSet_Gen.json"
-          },
-          "Evaluations_Delete_MinimumSet_Gen": {
-            "$ref": "./examples/Evaluations_Delete_MinimumSet_Gen.json"
           }
         }
       }
@@ -1082,12 +992,6 @@
         "x-ms-examples": {
           "Evaluations_Cancel_MaximumSet": {
             "$ref": "./examples/Evaluations_Cancel_MaximumSet_Gen.json"
-          },
-          "Evaluations_Cancel_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_Cancel_MaximumSet_Gen.json"
-          },
-          "Evaluations_Cancel_MinimumSet_Gen": {
-            "$ref": "./examples/Evaluations_Cancel_MinimumSet_Gen.json"
           }
         }
       }
@@ -1135,12 +1039,6 @@
             "$ref": "./examples/Evaluations_Create_MaximumSet_Gen.json"
           },
           "Evaluations_Create_MinimumSet": {
-            "$ref": "./examples/Evaluations_Create_MinimumSet_Gen.json"
-          },
-          "Evaluations_Create_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_Create_MaximumSet_Gen.json"
-          },
-          "Evaluations_Create_MinimumSet_Gen": {
             "$ref": "./examples/Evaluations_Create_MinimumSet_Gen.json"
           }
         }
@@ -1190,12 +1088,6 @@
           },
           "Evaluations_CreateAgentEvaluation_MinimumSet": {
             "$ref": "./examples/Evaluations_CreateAgentEvaluation_MinimumSet_Gen.json"
-          },
-          "Evaluations_CreateAgentEvaluation_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_CreateAgentEvaluation_MaximumSet_Gen.json"
-          },
-          "Evaluations_CreateAgentEvaluation_MinimumSet_Gen": {
-            "$ref": "./examples/Evaluations_CreateAgentEvaluation_MinimumSet_Gen.json"
           }
         }
       }
@@ -1234,12 +1126,6 @@
             "$ref": "./examples/Indexes_ListLatest_MaximumSet_Gen.json"
           },
           "Indexes_ListLatest_MinimumSet": {
-            "$ref": "./examples/Indexes_ListLatest_MinimumSet_Gen.json"
-          },
-          "Indexes_ListLatest_MaximumSet_Gen": {
-            "$ref": "./examples/Indexes_ListLatest_MaximumSet_Gen.json"
-          },
-          "Indexes_ListLatest_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_ListLatest_MinimumSet_Gen.json"
           }
         },
@@ -1289,12 +1175,6 @@
             "$ref": "./examples/Indexes_ListVersions_MaximumSet_Gen.json"
           },
           "Indexes_ListVersions_MinimumSet": {
-            "$ref": "./examples/Indexes_ListVersions_MinimumSet_Gen.json"
-          },
-          "Indexes_ListVersions_MaximumSet_Gen": {
-            "$ref": "./examples/Indexes_ListVersions_MaximumSet_Gen.json"
-          },
-          "Indexes_ListVersions_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_ListVersions_MinimumSet_Gen.json"
           }
         },
@@ -1351,12 +1231,6 @@
             "$ref": "./examples/Indexes_GetVersion_MaximumSet_Gen.json"
           },
           "Indexes_GetVersion_MinimumSet": {
-            "$ref": "./examples/Indexes_GetVersion_MinimumSet_Gen.json"
-          },
-          "Indexes_GetVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Indexes_GetVersion_MaximumSet_Gen.json"
-          },
-          "Indexes_GetVersion_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_GetVersion_MinimumSet_Gen.json"
           }
         }
@@ -1427,12 +1301,6 @@
           },
           "Indexes_CreateOrUpdateVersion_MinimumSet": {
             "$ref": "./examples/Indexes_CreateOrUpdateVersion_MinimumSet_Gen.json"
-          },
-          "Indexes_CreateOrUpdateVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Indexes_CreateOrUpdateVersion_MaximumSet_Gen.json"
-          },
-          "Indexes_CreateOrUpdateVersion_MinimumSet_Gen": {
-            "$ref": "./examples/Indexes_CreateOrUpdateVersion_MinimumSet_Gen.json"
           }
         }
       },
@@ -1480,12 +1348,6 @@
             "$ref": "./examples/Indexes_DeleteVersion_MaximumSet_Gen.json"
           },
           "Indexes_DeleteVersion_MinimumSet": {
-            "$ref": "./examples/Indexes_DeleteVersion_MinimumSet_Gen.json"
-          },
-          "Indexes_DeleteVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Indexes_DeleteVersion_MaximumSet_Gen.json"
-          },
-          "Indexes_DeleteVersion_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_DeleteVersion_MinimumSet_Gen.json"
           }
         }
@@ -1588,9 +1450,6 @@
         "x-ms-examples": {
           "Insights_ListInsights": {
             "$ref": "./examples/Insights_ListInsights_MinimumSet_Gen.json"
-          },
-          "Insights_ListInsights_MaximumSet_Gen": {
-            "$ref": "./examples/Insights_ListInsights_MaximumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -1654,9 +1513,6 @@
         "x-ms-examples": {
           "Insights_GenerateInsights": {
             "$ref": "./examples/Insights_GenerateInsights_MinimumSet_Gen.json"
-          },
-          "Insights_GenerateInsights_MaximumSet_Gen": {
-            "$ref": "./examples/Insights_GenerateInsights_MaximumSet_Gen.json"
           }
         }
       }
@@ -1717,9 +1573,6 @@
         "x-ms-examples": {
           "Insights_GetInsight": {
             "$ref": "./examples/Insights_GetInsight_MinimumSet_Gen.json"
-          },
-          "Insights_GetInsight_MaximumSet_Gen": {
-            "$ref": "./examples/Insights_GetInsight_MaximumSet_Gen.json"
           }
         }
       }
@@ -1766,12 +1619,6 @@
         "x-ms-examples": {
           "RedTeams_List_MaximumSet": {
             "$ref": "./examples/RedTeams_List_MaximumSet_Gen.json"
-          },
-          "RedTeams_List_MaximumSet_Gen": {
-            "$ref": "./examples/RedTeams_List_MaximumSet_Gen.json"
-          },
-          "RedTeams_List_MinimumSet_Gen": {
-            "$ref": "./examples/RedTeams_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -1828,12 +1675,6 @@
         "x-ms-examples": {
           "RedTeams_Get_MaximumSet": {
             "$ref": "./examples/RedTeams_Get_MaximumSet_Gen.json"
-          },
-          "RedTeams_Get_MaximumSet_Gen": {
-            "$ref": "./examples/RedTeams_Get_MaximumSet_Gen.json"
-          },
-          "RedTeams_Get_MinimumSet_Gen": {
-            "$ref": "./examples/RedTeams_Get_MinimumSet_Gen.json"
           }
         }
       }
@@ -1882,12 +1723,6 @@
           },
           "RedTeams_Create_MinimumSet": {
             "$ref": "./examples/RedTeams_Create_MinimumSet_Gen.json"
-          },
-          "RedTeams_Create_MaximumSet_Gen": {
-            "$ref": "./examples/RedTeams_Create_MaximumSet_Gen.json"
-          },
-          "RedTeams_Create_MinimumSet_Gen": {
-            "$ref": "./examples/RedTeams_Create_MinimumSet_Gen.json"
           }
         }
       }
@@ -1933,11 +1768,6 @@
         },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
-        },
-        "x-ms-examples": {
-          "Schedules_List_MaximumSet_Gen": {
-            "$ref": "./examples/Schedules_List_MaximumSet_Gen.json"
-          }
         }
       }
     },
@@ -1985,11 +1815,6 @@
                 "description": "String error code indicating what went wrong."
               }
             }
-          }
-        },
-        "x-ms-examples": {
-          "Schedules_Get_MaximumSet_Gen": {
-            "$ref": "./examples/Schedules_Get_MaximumSet_Gen.json"
           }
         }
       },
@@ -2042,11 +1867,6 @@
               }
             }
           }
-        },
-        "x-ms-examples": {
-          "Schedules_CreateOrUpdate_MaximumSet_Gen": {
-            "$ref": "./examples/Schedules_CreateOrUpdate_MaximumSet_Gen.json"
-          }
         }
       },
       "delete": {
@@ -2090,14 +1910,6 @@
               }
             }
           }
-        },
-        "x-ms-examples": {
-          "Schedules_Delete_MaximumSet_Gen": {
-            "$ref": "./examples/Schedules_Delete_MaximumSet_Gen.json"
-          },
-          "Schedules_Delete_MinimumSet_Gen": {
-            "$ref": "./examples/Schedules_Delete_MinimumSet_Gen.json"
-          }
         }
       }
     },
@@ -2135,11 +1947,6 @@
                 "description": "String error code indicating what went wrong."
               }
             }
-          }
-        },
-        "x-ms-examples": {
-          "Schedules_ListRuns_MaximumSet_Gen": {
-            "$ref": "./examples/Schedules_ListRuns_MaximumSet_Gen.json"
           }
         }
       }
@@ -2185,11 +1992,6 @@
                 "description": "String error code indicating what went wrong."
               }
             }
-          }
-        },
-        "x-ms-examples": {
-          "Schedules_GetRun_MaximumSet_Gen": {
-            "$ref": "./examples/Schedules_GetRun_MaximumSet_Gen.json"
           }
         }
       }
@@ -3090,8 +2892,7 @@
         }
       },
       "required": [
-        "expression",
-        "endTime"
+        "expression"
       ],
       "allOf": [
         {
@@ -4164,7 +3965,7 @@
       "properties": {
         "triggerAt": {
           "type": "string",
-          "description": "Date and time for the one-time trigger."
+          "description": "Date and time for the one-time trigger in ISO 8601 format."
         },
         "timeZone": {
           "type": "string",
@@ -4748,6 +4549,7 @@
           "description": "Description of the schedule."
         },
         "enabled": {
+          "type": "boolean",
           "description": "Enabled status of the schedule."
         },
         "provisioningStatus": {
@@ -4850,6 +4652,7 @@
           "description": "Identifier of the schedule."
         },
         "success": {
+          "type": "boolean",
           "description": "Trigger success status of the schedule run.",
           "readOnly": true
         },
