fix csharp package dir

--- a/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
+++ b/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
@@ -32,7 +32,7 @@ options:
     package-name: "Azure.Containers.ContainerRegistry"
     package-dir: "Azure.Containers.ContainerRegistry"
     package-version: "1.1.1"
-    namespace: "{package-dir}"
+    namespace: "Azure.Containers.ContainerRegistry"
     clear-output-folder: true
     model-namespace: false
     generate-test: true
