--- a/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
+++ b/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
@@ -35,7 +35,7 @@ options:
   "@azure-tools/typespec-csharp":
     package-dir: "Azure.Containers.ContainerRegistry"
     package-version: "1.1.1"
-    namespace: "{package-dir}"
+    namespace: "Azure.Containers.ContainerRegistry"
     clear-output-folder: true
     model-namespace: false
     generate-test: true
